validator/openshift/frontend/test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: f343b4-test
  name: validator-frontend
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"validator-frontend:test","namespace":"f343b4-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","pause":"false"}]
spec:
  selector:
    matchLabels:
      app: validator-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: validator-frontend
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/f343b4-tools/validator-frontend@sha256:0e57a633ca9838629d368851ff7551a8e6ba87337314b305a47549c391480cae
          ports:
            - containerPort: 8080
              protocol: TCP
          env: []
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  paused: false
