validator/openshift/frontend/test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: validator-frontend
  namespace: f343b4-test
spec:
  selector:
    app: validator-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5173
